# opengl_learn

./: .gitignore  CMakeLists.txt
3part_libs/glad/include/glad/: glad.h
3part_libs/glad/src/: glad.c
glsl/: fshader.fs  fshader.glsl  light.fs  light.vs  obj.fs  obj.vs  vshader.glsl  vshader.vs
include/: camera.h  glog.h  shader.h  utils.h
src/: main.cpp  utils.cpp
